--- a/templates/proprietes/locataires/locataire_form.html
+++ b/templates/proprietes/locataires/locataire_form.html
@@ -475,7 +475,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="{{ form.garant_code_postal.id_for_label }}" class="form-label required-field">
+                                <label for="{{ form.garant_code_postal.id_for_label }}" class="form-label">
                                     {{ form.garant_code_postal.label }}
                                 </label>
                                 {{ form.garant_code_postal }}
@@ -565,7 +565,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="{{ form.justificatif_domicile.id_for_label }}" class="form-label required-field">
+                                <label for="{{ form.justificatif_domicile.id_for_label }}" class="form-label">
                                     {{ form.justificatif_domicile.label }}
                                 </label>
                                 {{ form.justificatif_domicile }}
@@ -585,7 +585,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="{{ form.justificatifs_revenus.id_for_label }}" class="form-label required-field">
+                                <label for="{{ form.justificatifs_revenus.id_for_label }}" class="form-label">
                                     {{ form.justificatifs_revenus.label }}
                                 </label>
                                 {{ form.justificatifs_revenus }}
@@ -603,7 +603,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="{{ form.avis_imposition.id_for_label }}" class="form-label required-field">
+                                <label for="{{ form.avis_imposition.id_for_label }}" class="form-label">
                                     {{ form.avis_imposition.label }}
                                 </label>
                                 {{ form.avis_imposition }}
